@@ -165,7 +165,19 @@ function myTemplate($query) {
 }
 
 /**
- * Disable gravatar.com calls on buddypress.
- * @author Víctor Saavedra (vsaavedr@xtec.cat)
+ * If user is not logged in, redirects at login screen on BuddyPress tabs
+ * @author Nacho Abejaro
  */
-add_filter( 'bp_core_fetch_avatar_no_grav', '__return_true' );
+
+function members_logged_in_only() {
+	global $current_user;
+
+	$uid = get_current_user_id();
+
+	if ($uid == 0) {
+		//Instead of using wp_redirect, echo location using meta
+		$location = home_url()."/wp-login.php";
+		echo "<meta http-equiv='refresh' content='0;url=$location'/>";
+	}
+}
+add_filter('bp_before_member_home_content', 'members_logged_in_only');
